tests/fixtures/invalid/round_no_args.py
# round() takes 1 or 2 arguments
print(round())
